# Broker

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  docker-compose.yml  requirements.txt  run_as_user.sh
.devcontainer/: README.md  devcontainer.json
.github/: service-deps.yaml
.github/workflows/: ci.yml
cmake/: DownloadUserver.cmake  OpenApiCodegen.cmake  get_cpm.cmake
libs/common/: CMakeLists.txt
scripts/: affected-services.sh  create-service.sh  install-deps-macos.sh  service-Makefile.template  service_deps.py
scripts/openapi_gen/: docs-api-README.md  ensure_venv.sh  generate.py
services/broker/: CMakeLists.txt  Makefile  README.md  requirements.txt
services/broker/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
services/broker/docs/api/: README.md  foo.yaml  hello.yaml  hello_postgres.yaml
services/broker/src/: greeting.cpp  greeting.hpp  greeting_benchmark.cpp  greeting_test.cpp  hello.cpp  hello.hpp  hello_grpc.cpp  hello_grpc.hpp  hello_postgres.cpp  hello_postgres.hpp  main.cpp
services/broker/src/views/foo/bar/: view.cpp  view.hpp
services/broker/src/views/hello/: view.cpp  view.hpp
services/broker/src/views/hello_postgres/: deps.hpp  view.cpp  view.hpp
services/broker/tests/: conftest.py  test_basic.py  test_grpc.py  test_openapi.py  test_postgres.py
